po: update po/tr_TR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/mailing.po
+++ b/po/tr_TR/mailing.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:50+0000\n"
+"PO-Revision-Date: 2016-07-27 06:31+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -103,7 +103,7 @@ msgstr "Postalama Gönderimi"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce type(s)"
-msgstr "Geri dönüş tipleri"
+msgstr "Geri dönüş türleri"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable Opens"
@@ -146,7 +146,7 @@ msgstr "Postalama Görevinin Durumu"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce Types"
-msgstr "Geri Dönüş Tipleri"
+msgstr "Geri Dönüş Türleri"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Opens"
@@ -178,7 +178,7 @@ msgstr "Bileşen Adı"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Type"
-msgstr "Postalama Bileşeni Tipi"
+msgstr "Postalama Bileşeni Türü"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Body HTML"
@@ -219,7 +219,7 @@ msgstr "Postalama Abonelikten Ayrılma"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Type"
-msgstr "Postalama Tipi"
+msgstr "Postalama Türü"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
@@ -373,7 +373,7 @@ msgstr "Postalama Grup Kodu"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Type"
-msgstr "Postalama Grup Tipi"
+msgstr "Postalama Grup Türü"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Entity Table"
@@ -409,7 +409,7 @@ msgstr "Postalama Görevini Deneme"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Type"
-msgstr "Postalama Görevi Tipi"
+msgstr "Postalama Görevi Türü"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Parent"
@@ -457,7 +457,7 @@ msgstr "Çıkarılma"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown bounce type: Could not parse bounce email"
-msgstr "Bilinmeyen geri dönüş tipi: Geri dönen e-posta işlenemiyor"
+msgstr "Bilinmeyen geri dönüş türü: Geri dönen e-posta işlenemiyor"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown"
@@ -549,7 +549,7 @@ msgstr "Notu Onaylayın/Reddedin"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Component Type"
-msgstr "Bileşen Tipi"
+msgstr "Bileşen Türü"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - TEXT Format"
@@ -670,13 +670,13 @@ msgstr "Süzülecek bir arama seçmelisiniz"
 msgid ""
 "If 'Email Selection Method' is automatic, you are not allowed to choose any "
 "'Location Type'"
-msgstr "'E-posta Seçimi Yöntemi' otomatik ise, herhangi bir 'Konum Tipi' seçilemez"
+msgstr "'E-posta Seçimi Yöntemi' otomatik ise, herhangi bir 'Konum Türü' seçilemez"
 
 #: CRM/Mailing/Form/Group.php
 msgid ""
 "If 'Location Type' is not selected, you must set the 'Email Selection "
 "Method' to automatic as well."
-msgstr "'Konum Tipi' seçilmemiş ise, 'E-posta Seçimi Yöntemi' seçeneği otomatik olarak ayarlanmalıdır"
+msgstr "'Konum Türü' seçilmemiş ise, 'E-posta Seçimi Yöntemi' seçeneği otomatik olarak ayarlanmalıdır"
 
 #: CRM/Mailing/Form/Optout.php CRM/Mailing/Form/Unsubscribe.php
 #: CRM/Mailing/Page/Common.php
@@ -1595,7 +1595,7 @@ msgstr "A/B denemesi rastgele alıcı alt kümelerine iki deneme postalaması ya
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
-msgstr "Deneme Tipi"
+msgstr "Deneme Türü"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
@@ -1698,7 +1698,7 @@ msgstr "Kişiler '%1' kullanarak aransın"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Browse events of type '%1'"
-msgstr "'%1' tipindeki etkinliklere gözatın"
+msgstr "'%1' türündeki etkinliklere gözatın"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "n/a"
@@ -1738,7 +1738,7 @@ msgstr "- Durum -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
-msgstr "- Deneme Tipi -"
+msgstr "- Deneme Türü -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
@@ -1943,7 +1943,7 @@ msgid ""
 "be assigned the <strong>Mailing List</strong> type to be available on this "
 "screen - you can update this for an existing group from <strong>Manage "
 "Groups &raquo; Settings</strong>.)"
-msgstr "Bu toplu posta iletisini alacak kişileri belirtmek için önce bir ya da bir kaç <strong>Katılacak Grup</strong> seçmelisiniz (Bu bölümde görüntülenmesi için grupların tipi <strong>Posta Listesi</strong> olarak atanmalıdır. Varolan bir grup için bu ayar <strong>Grup Yönetimi &raquo; Ayarlar</strong> bölümünden yapılabilir)."
+msgstr "Bu toplu posta iletisini alacak kişileri belirtmek için önce bir ya da bir kaç <strong>Katılacak Grup</strong> seçmelisiniz (Bu bölümde görüntülenmesi için grupların türü <strong>Posta Listesi</strong> olarak atanmalıdır. Varolan bir grup için bu ayar <strong>Grup Yönetimi &raquo; Ayarlar</strong> bölümünden yapılabilir)."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -2422,7 +2422,7 @@ msgstr "<strong>%1 (%2)</strong>, <strong>%3</strong> postalama listesine eklend
 msgid ""
 "Oops. We encountered a problem in processing your subscription confirmation."
 " Please contact the site administrator."
-msgstr "Malesef, abonelik onayınız işlenirken bir sorun çıktı. Lütfen site yöneticisi ile görüşün."
+msgstr "Maalesef, abonelik onayınız işlenirken bir sorun çıktı. Lütfen site yöneticisi ile görüşün."
 
 #: templates/CRM/Mailing/Page/Event.tpl
 msgid "There are currently no %1."
@@ -2522,15 +2522,15 @@ msgstr "Geri Dönüş Örüntü Kodu"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type ID"
-msgstr "Geri Dönüş Tip Kodu"
+msgstr "Geri Dönüş Türü Kodu"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Name"
-msgstr "Geri Dönüş Tip Adı"
+msgstr "Geri Dönüş Türü Adı"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Description"
-msgstr "Geri Dönüş Tip Açıklaması"
+msgstr "Geri Dönüş Türü Açıklaması"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Spool ID"
