--- a/po/tr_TR/pcp.po
+++ b/po/tr_TR/pcp.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:49+0000\n"
+"PO-Revision-Date: 2016-07-27 05:55+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -188,11 +188,11 @@ msgstr "Bağış Bağlantısı Metni"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Page Type"
-msgstr "Kişisel Kampanya Sayfa Tipi"
+msgstr "Kişisel Kampanya Sayfa Türü"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity Type"
-msgstr "Hedef Varlık Tipi"
+msgstr "Hedef Varlık Türü"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Owner Notification"
@@ -364,7 +364,7 @@ msgstr "Sayfa Etkinleştirildi"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
-msgstr "Kaynak Tipi"
+msgstr "Kaynak Türü"
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
