po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 15:51+0000\n"
+"PO-Revision-Date: 2016-07-28 16:14+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -3642,7 +3642,7 @@ msgstr "Aquesta és una instal·lació multi-idiomes.Conté alguns esquemes dife
 msgid ""
 "Check this box and click 'Save' to switch this installation from multi- to "
 "single-language."
-msgstr "Marqueu aquesta casella i pressioneu el botó 'desar' per a canviar la instal·lació de multi- a un sol idioma."
+msgstr "Marqueu aquesta casella i feu clic al botó 'desar' per a canviar la instal·lació de multi- a un sol idioma."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
@@ -4631,7 +4631,7 @@ msgstr "Signe més"
 msgid ""
 "Administer your CiviCRM site using the links on this page. Click %1 for "
 "descriptions of the options in each section."
-msgstr "Administreu el lloc CiviCRM utilitzant els enllaços en aquesta pàgina. Pressioneu %1 per a ver les descripcions de les opcions en cada secció."
+msgstr "Administreu el lloc CiviCRM utilitzant els enllaços en aquesta pàgina. Feu clic a %1 per a veure les descripcions de les opcions de cada secció."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Edit settings"
