--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,8 +42,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-21 10:06+0000\n"
-"Last-Translator: sluc23 <sluc23@hotmail.com>\n"
+"PO-Revision-Date: 2016-07-28 15:01+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25579,7 +25579,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "To End of Previous"
-msgstr ""
+msgstr "Hasta el fin del pasado"
 
 #: CRM/Core/SelectValues.php
 msgid "From End of Previous"
@@ -26567,19 +26567,19 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous week"
-msgstr ""
+msgstr "Hasta el fin de la semana anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar month"
-msgstr ""
+msgstr "Hasta el fin el mes natural anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous quarter"
-msgstr ""
+msgstr "Hasta el fin del trimestre anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar year"
-msgstr ""
+msgstr "Hasta el fin del año natural anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current day"
