po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -7,6 +7,7 @@
 # Anaïs V. <anais.vidal1@gmail.com>, 2015
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
+# BFPTC <webmaster@bienfaitpourta.com>, 2016
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
@@ -28,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-09 12:55+0000\n"
-"Last-Translator: Imane Sadaoui <imane.sadaoui@gmail.com>\n"
+"PO-Revision-Date: 2016-07-28 15:02+0000\n"
+"Last-Translator: BFPTC <webmaster@bienfaitpourta.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -648,7 +649,7 @@ msgstr "Vous avez activé l'option sur les comtés. Veuillez peupler la table de
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Populate counties"
-msgstr ""
+msgstr "Préremplir les pays"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "CiviCampaign Component Settings"
@@ -685,7 +686,7 @@ msgstr "Préfixe facture"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for invoice"
-msgstr ""
+msgstr "Entrez le préfixe à afficher dans les factures au format PDF"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Credit Notes Prefix"
@@ -701,11 +702,11 @@ msgstr "Pour transmission"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Select the interval for due date."
-msgstr ""
+msgstr "Sélectionnez l'intervalle pour la date d'échéance."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
-msgstr ""
+msgstr "Notes ou termes standards"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter note or message to be displayed on PDF invoice or credit notes "
@@ -713,7 +714,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
-msgstr ""
+msgstr "Envoyer la facture d'achat automatiquement par e-mail lorsqu'un utilisateur effectue un achat en ligne"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
@@ -930,7 +931,7 @@ msgstr "Activer la configuration multisite"
 msgid ""
 "Make CiviCRM aware of multiple domains. You should configure a domain group "
 "if enabled"
-msgstr ""
+msgstr "Indiquer à CiviCRM la présence de plusieurs domaines. Si l'option est activée, vous pourrez regrouper les domaines."
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Domain Group"
@@ -1000,11 +1001,11 @@ msgstr "Le type de relation sélectionné a été enregistré."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "Envoyer le courriel"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "Enregistrer une activité pour les courriels automatiques"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
@@ -1012,7 +1013,7 @@ msgstr "Envoyer un courriel ou un SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email or SMS"
-msgstr ""
+msgstr "Enregistrer une activité pour les courriels automatiques ou les SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send as"
@@ -1020,19 +1021,19 @@ msgstr "Envoyé comme"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "avant"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "après"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
-msgstr ""
+msgstr "Condition d'action"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Condition de répétition"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
@@ -1040,7 +1041,7 @@ msgstr "Courriel de"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Limiter à"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
@@ -1048,19 +1049,19 @@ msgstr "Inclus également"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit or Add Recipients"
-msgstr ""
+msgstr "Limiter à certains destinataires ou en ajouter"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
-msgstr ""
+msgstr "Limiter les options"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
-msgstr ""
+msgstr "Rôles des destinataires"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
-msgstr ""
+msgstr "Destinataires manuels"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select appropriate value"
@@ -1068,7 +1069,7 @@ msgstr "Merci de sélectionner une valeur appropriée"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "Le sujet est un champ obligatoire."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -1076,21 +1077,21 @@ msgstr "Merci de sélectionner une valeur d'entité"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Absolute date cannot be earlier than the current time."
-msgstr ""
+msgstr "La date absolue ne peut être antérieure à la date actuelle."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid ""
 "If \"Also include\" or \"Limit to\" are selected, you must specify at least "
 "one %1"
-msgstr ""
+msgstr "Si \"Inclure également\" ou \"Limiter à\" sont sélectionnés, vous devez spécifier au moins un %1"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
-msgstr ""
+msgstr "Le rappel sélectionné a été supprimé."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "Votre nouveau rappel intitulé %1 a bien été sauvegardé."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -2003,7 +2004,7 @@ msgstr "Êtes-vous sûr de vouloir supprimer cette correspondance de champs ?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr ""
+msgstr "Cette opération ne peut être annulée."
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2195,74 +2196,74 @@ msgstr "Fusionner les étiquettes"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Summary"
-msgstr ""
+msgstr "Autorisations : résumé"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "Autorisations : détails"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Propriété"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr ""
+msgstr "The application \\\"%1\\\" demande la permission d'accéder à votre système."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "Etes-vous sûr de vouloir reconnecter \\\"%1\\\"?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
 "Reconnecting will change the connection details (such as callback URLs and "
 "permissions). This can be useful in a few cases, such as:"
-msgstr ""
+msgstr "Reconnecter changera le détail des connections (comme les URLs de rappel ou les autorisations). Cela peut être utile dans les cas suivants :"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "Après que votre site ait migré vers une nouvelle URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Après que votre application ait migré vers une nouvelle URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "Après que l'application ait changé les autorisations requises."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "Après que l'application ait rencontré une défaillance majeure ou une réinitialisation."
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "Il y a eu un problème lors de la vérification de la présence du site sur Internet de façon publique."
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Voir aussi :"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "Pare-feux et proxys"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "Les connections présentent une façon simplifiée de lier votre instance de CiviCRM vers un service externe."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Connexions existantes"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
-msgstr ""
+msgstr "%1 : À propos"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
