po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 12:16+0000\n"
+"PO-Revision-Date: 2016-07-28 15:57+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -8082,39 +8082,39 @@ msgstr "La setmana anterior"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Year"
-msgstr ""
+msgstr "Fins a la fi de l'any passat"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Quarter"
-msgstr ""
+msgstr "Fins a la fi del trimestre passat"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Month"
-msgstr ""
+msgstr "Fins a la fi del mes passat"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Week"
-msgstr ""
+msgstr "Fins a la fi de la setmana passada"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Day"
-msgstr ""
+msgstr "Fins a la fi del dia anterior"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Year"
-msgstr ""
+msgstr "Des de la fi de l'any passat"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Quarter"
-msgstr ""
+msgstr "Des de la fi del trimestre passat"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Month"
-msgstr ""
+msgstr "Des de la fi del mes passat"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Week"
-msgstr ""
+msgstr "Des de la fi de la setmana passada"
 
 #: CRM/Core/Form/Date.php
 msgid "From Start of Current Year"
@@ -8222,19 +8222,19 @@ msgstr "Pròxims 12 mesos"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Year"
-msgstr ""
+msgstr "Fins a la fi de l'any actual"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Quarter"
-msgstr ""
+msgstr "Fins a la fi del trimestre actual"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Month"
-msgstr ""
+msgstr "Fins a la fi del mes actual"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Week"
-msgstr ""
+msgstr "Fins al final d'aquesta setmana"
 
 #: CRM/Core/Form/Date.php
 msgid "Next Week"
@@ -11017,7 +11017,7 @@ msgstr "S'ha desat el grup '%1'."
 
 #: CRM/Group/Form/Edit.php
 msgid "select group"
-msgstr ""
+msgstr "selecciona un grup"
 
 #: CRM/Group/Form/Edit.php
 msgid "Add Parent"
@@ -14091,7 +14091,7 @@ msgid ""
 "just these problem records - <a href='%2'>Download Errors</a>. Then correct "
 "them in the original import file, cancel this import and begin again at step"
 " 1."
-msgstr "CiviCRM ha detectat dades invàlids o errors de format en %1 registres. Si continua, s'ometran aquests registres. O, pot descarregar un arxiu amb només aquests registres de problemes - <a href='%2'> Descarregar Errors </ a>. Llavors corregir-los en el fitxer d'importació original, cancel · lar aquesta importació i començar de nou en el pas 1."
+msgstr "CiviCRM ha detectat dades invàlids o errors de format en %1 registres. Si continua, s'ometran aquests registres. O, pot descarregar un arxiu amb només aquests registres de problemes - <a href='%2'>descarregar els errors</a>. Després els pots corregir en el fitxer d'importació original, cancel · lar aquesta importació i començar de nou en el pas 1."
 
 #: templates/CRM/Activity/Import/Form/Preview.tpl
 msgid ""
@@ -14100,7 +14100,7 @@ msgid ""
 "download a file with just these problem records - <a href='%2'>Download "
 "Conflicts</a>. Then correct them in the original import file, cancel this "
 "import and begin again at step 1."
-msgstr "CiviCRM ha detectat que dins d'aquest arxiu de dades existeixen %1 de registres amb conflicte d'identificació de transaccions. Si continua, s'ometran aquests registres. O, pot descarregar un arxiu amb només aquests registres de problemes - <a href='%2'> Descarregar Conflictes </ a>. Llavors corregir-los en el fitxer d'importació original, cancel·lar aquest importació i començar de nou en el pas 1."
+msgstr "CiviCRM ha detectat que dins d'aquest arxiu de dades existeixen %1 de registres amb conflicte d'identificació de transaccions. Si continua, s'ometran aquests registres. O, pot descarregar un arxiu amb només aquests registres de problemes - <a href='%2'>descarregar els conflictes</a>. Després els pots corregir en el fitxer d'importació original, cancel·lar aquest importació i començar de nou en el pas 1."
 
 #: templates/CRM/Activity/Import/Form/Preview.tpl
 #: templates/CRM/Contact/Import/Form/Preview.tpl
@@ -16462,7 +16462,7 @@ msgid ""
 "download a file with just these problem records - <a href='%2'>Download "
 "Conflicts</a>. Then correct them in the original import file, cancel this "
 "import and begin again at step 1."
-msgstr "CiviCRM ha detectat que dins d'aquest arxiu de dades, existeixen %1 de registres amb conflictes de direccions de correu electrònic. Si continua aquest registres s'ometran. O pot descarregar un arxiu que contingui només aquest registres problemàtics - <a href='%2'>Descarregar conflictes</a>. Posteriorment corregir-los en l'arxiu d'importació original, cancel·li aquesta importació i torni a començar en el pas 1."
+msgstr "CiviCRM ha detectat que dins d'aquest arxiu de dades, existeixen %1 de registres amb conflictes de direccions de correu electrònic. Si continua aquest registres s'ometran. O pot descarregar un arxiu que contingui només aquest registres problemàtics - <a href='%2'>descarregar els conflictes</a>. Posteriorment corregir-los en l'arxiu d'importació original, cancel·li aquesta importació i torni a començar en el pas 1."
 
 #: templates/CRM/Contact/Import/Form/Preview.tpl
 #: templates/CRM/Contact/Import/Form/Summary.tpl
@@ -16555,7 +16555,7 @@ msgid ""
 "You can <a href='%1'>Download Conflicts</a>. You may then review these "
 "records to determine if they are actually conflicts, and correct the email "
 "addresses for those that are not."
-msgstr "Pot <a href='%1'>Descarregar registres amb conflictes </a>. Posteriorment podrà revisar-los per a determinar si són realment conflictes, i corregir la direcció de correu electrònic d'aquells que no ho són. "
+msgstr "Pot <a href='%1'>descarregar registres amb conflictes</a>. Posteriorment podrà revisar-los per a determinar si són realment conflictes, i corregir la direcció de correu electrònic d'aquells que no ho són. "
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
@@ -16572,13 +16572,13 @@ msgid ""
 "You can <a href='%1'>Download Duplicates</a>. You may then review these "
 "records to determine if they are actually duplicates, and correct the email "
 "address for those that are not."
-msgstr "Pot <a href='%1'>Descarregar Duplicats</ a>. A continuació, pot revisar aquests registres per determinar si en realitat són duplicats, i corregir la direcció de correu electrònic per als que no ho són."
+msgstr "Pot <a href='%1'>descarregar Duplicats</a>. A continuació, pot revisar aquests registres per determinar si en realitat són duplicats, i corregir la direcció de correu electrònic per als que no ho són."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Street Address Records </a>. You may then edit"
 " those contact records and update the street address accordingly."
-msgstr "Pot <a href='%1'>Descarregar els registres de direccions postals </ a>. A continuació, pot editar els registres de contactes i actualitzar la direcció postal corresponent."
+msgstr "Pot <a href='%1'>descarregar els registres de direccions postals</a>. A continuació, pot editar els registres de contactes i actualitzar la direcció postal corresponent."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Rows with mismatched contact IDs... (NOT updated)."
@@ -18054,7 +18054,7 @@ msgid ""
 "from people registering for your events, select \"Participants\". If the "
 "information is specific to one type of participant (e.g. event volunteers), "
 "select \"Participants (role)\" and then select the role (e.g. 'Volunteer')."
-msgstr "Exemple: Siutilitzeu CiviEvent, i voleu obtenir més informació de les persones que s'inscriuen a l'esdeveniment, seleccioneu 'participants'. Si la informació és específica per a un tipus de participant (p. ex. voluntaris de l'esdeveniment), seleccioneu 'participants (rol)' i després seleccioneu (p. ex. 'voluntari')."
+msgstr "Exemple: Si esteu utilitzant CiviEvent i voleu obtenir més informació de les persones que s'inscriuen a l'esdeveniment, seleccioneu 'participants'. Si la informació és específica per a un tipus de participant (p. ex. voluntaris de l'esdeveniment), seleccioneu 'participants (rol)' i després seleccioneu (p. ex. 'voluntari')."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid ""
@@ -25554,11 +25554,11 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "To End of Previous"
-msgstr ""
+msgstr "FIns a la fi del passat"
 
 #: CRM/Core/SelectValues.php
 msgid "From End of Previous"
-msgstr ""
+msgstr "Des de la fi del passat"
 
 #: CRM/Core/SelectValues.php
 msgid "From Start Of Current"
@@ -26542,19 +26542,19 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous week"
-msgstr ""
+msgstr "Fins a la fi de la setmana passada"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar month"
-msgstr ""
+msgstr "Fins a la fi del mes natural passat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous quarter"
-msgstr ""
+msgstr "Fins a la fi del trimestre passat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar year"
-msgstr ""
+msgstr "Fins a la fi de l'any natural passat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current day"
@@ -26578,19 +26578,19 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current week"
-msgstr ""
+msgstr "Fins al final d'aquesta setmana"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar month"
-msgstr ""
+msgstr "Fins a la fi del mes natural actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current quarter"
-msgstr ""
+msgstr "Fins a la fi del trimestre actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar year"
-msgstr ""
+msgstr "Fins a la fi de l'any natural actual"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 days"
@@ -26634,19 +26634,19 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous week"
-msgstr ""
+msgstr "Des de la fi de la setmana passada"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar month"
-msgstr ""
+msgstr "Des de la fi del mes natural passat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous quarter"
-msgstr ""
+msgstr "Des de la fi del trimestre passat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar year"
-msgstr ""
+msgstr "Des de la fi de l'any natural passat"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
