--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -7,14 +7,15 @@
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
+# ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 10:01+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-28 16:01+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1615,7 +1616,7 @@ msgstr "Data de creació"
 msgid ""
 "You can <a href=\"%1\">Download Errors</a>. You may then correct them, and "
 "import the new file with the corrected data."
-msgstr "Pots <a href=\"%1\"> Descarregar Errors </ a>. Pots corregir i importar el nou fitxer amb les dades corregides."
+msgstr "Pots <a href=\"%1\">descarregar els errors</a>. Pots corregir i importar el nou fitxer amb les dades corregides."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: templates/CRM/Member/Import/Form/Summary.tpl
@@ -1623,7 +1624,7 @@ msgid ""
 "You can <a href=\"%1\">Download Conflicts</a>. You may then review these "
 "records to determine if they are actually conflicts, and correct the "
 "transaction IDs for those that are not."
-msgstr "Pots <a href=\"%1\"> Descarregar Conflictes </ a>. Pots llavors revisar per determinar si realment hi ha conflictes, i corregir les IDs the transaccions que no ho són."
+msgstr "Pots <a href=\"%1\">descarregar els conflictes</a>. Després els pots revisar per determinar si realment hi ha conflictes, i corregir els identificadors de les transaccions que no ho són."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: templates/CRM/Member/Import/Form/Summary.tpl
@@ -1631,7 +1632,7 @@ msgid ""
 "You can <a href=\"%1\">Download Duplicates</a>. You may then review these "
 "records to determine if they are actually duplicates, and correct the "
 "transaction IDs for those that are not."
-msgstr "Pots <a href=\"%1\"> Descarregar Duplicats </ a>. Després pots revisar per determinar si són realment duplicats, i corregir les ID de les transaccions si no ho són."
+msgstr "Pots <a href=\"%1\">descarregar els duplicats</a>. Després pots revisar per determinar si són realment duplicats, i corregir els identificadors de les transaccions si no ho són."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: CRM/Report/Form/Contribute/Detail.php
@@ -1643,7 +1644,7 @@ msgstr "Crèdits tous"
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "Manage Personal Campaign Pages"
-msgstr ""
+msgstr "Administra les pàgines de campanya personal"
 
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
