--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -5,12 +5,13 @@
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2014-2016
+# ixiam <info@ixiam.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 08:38+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-28 16:09+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -946,7 +947,7 @@ msgstr "És aquesta la enquesta per defecte?"
 msgid ""
 "Click <strong>record response</strong> button to update values for each "
 "respondent as needed."
-msgstr "Pressioneu el botó de <strong>desar resposta</strong> per a actualitzar els valors de cada enquestat, segons sigui necessari."
+msgstr "Feu clic al botó de <strong>desar resposta</strong> per a actualitzar els valors de cada enquestat, segons sigui necessari."
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid ""
