--- a/po/ca_ES/pcp.po
+++ b/po/ca_ES/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 15:36+0000\n"
+"PO-Revision-Date: 2016-07-28 16:20+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -630,7 +630,7 @@ msgstr ""
 msgid ""
 "This screen shows all the Personal Campaign Pages created in the system and "
 "allows administrator to review them and change their status."
-msgstr ""
+msgstr "Aquesta pantalla mostra totes les pàgines de campanya personal creades en el sistema i permet als seus administradors revisar-les i modificar-ne els seus estats."
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "Page Title"
