--- a/po/ko_KR/campaign.po
+++ b/po/ko_KR/campaign.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-28 04:40+0000\n"
+"PO-Revision-Date: 2016-07-28 09:46+0000\n"
 "Last-Translator: Min-kwon Jo <minkwon007@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
@@ -405,19 +405,19 @@ msgstr "설문조사 결과 집합을 선택해주세요."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "A Survey Detail Report <a href='%1'>%2</a> has been created."
-msgstr ""
+msgstr "설문조사 상세 보고서 <a href='%1'>%2</a>가 생성되었습니다."
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
-msgstr ""
+msgstr "메인 정보"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
-msgstr ""
+msgstr "설문조사 구성 - %1"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "'%1' have been saved."
-msgstr ""
+msgstr "'%1'이(가) 저장되었습니다."
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "Selected Survey type has been deleted."
@@ -441,7 +441,7 @@ msgstr "에그머니나. 반응 옵션이 설정되지 않은 것 같습니다."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Order By >>"
-msgstr ""
+msgstr "정렬 >>"
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Release Respondents >>"
@@ -478,16 +478,16 @@ msgstr "우리는 이 설문 조사에 관해 발표할 응답자를 찾을 수 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
 msgid_plural "%count respondents have been released."
-msgstr[0] ""
+msgstr[0] "%count 응답자들이 발표되었습니다."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Released"
-msgstr ""
+msgstr "출시"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
+msgstr[0] "%count 응답자는 발표하지 않았다."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -506,7 +506,7 @@ msgstr "연락처의 최대 개수는 이미이 면접관을 위해 예약되어
 msgid "You can reserve a maximum of %count contact at a time for this survey."
 msgid_plural ""
 "You can reserve a maximum of %count contacts at a time for this survey."
-msgstr[0] ""
+msgstr[0] "이 조사를 위해 한 번에 %count 연락처들의 최대값을 예약할 수 있습니다."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
@@ -529,72 +529,72 @@ msgstr "응답자 예약"
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "%count contact has been reserved."
 msgid_plural "%count contacts have been reserved."
-msgstr[0] ""
+msgstr[0] "%count 연락처가 예약되었습니다."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "They have been added to %1."
-msgstr ""
+msgstr "그들은 %1에 추가되었습니다."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation Added"
-msgstr ""
+msgstr "예약 추가됨"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation did not add for %count contact."
 msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] ""
+msgstr[0] "예약은 %count 연락처들을 위해 추가하지 않았습니다."
 
 #: CRM/Campaign/Info.php
 msgid "administer CiviCampaign"
-msgstr ""
+msgstr "Civi캠페인 관리"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
+msgstr "캠페인, 설문조사 그리고 청원유형과 그것들의 상태를 생성합니다."
 
 #: CRM/Campaign/Info.php
 msgid "manage campaign"
-msgstr ""
+msgstr "캠페인 관리"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr ""
+msgstr "새 캠페인, 설문조사 그리고 청원, 응답 예약을 생성합니다."
 
 #: CRM/Campaign/Info.php
 msgid "reserve campaign contacts"
-msgstr ""
+msgstr "캠페인 연락처를 예약합니다."
 
 #: CRM/Campaign/Info.php
 msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "설문조사와 청원을 위한 캠페인 연락처 예약합니다."
 
 #: CRM/Campaign/Info.php
 msgid "release campaign contacts"
-msgstr ""
+msgstr "캠페인 연락처 공개"
 
 #: CRM/Campaign/Info.php
 msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "설문조사와 청원을 위해 예약된 캠페인 연락처를 공개합니다."
 
 #: CRM/Campaign/Info.php
 msgid "interview campaign contacts"
-msgstr ""
+msgstr "면접 캠페인 연락처"
 
 #: CRM/Campaign/Info.php
 msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
+msgstr "그들의 예약된 연락처로부터의 설문조사 그리고 청원 응답 레코드"
 
 #: CRM/Campaign/Info.php
 msgid "GOTV campaign contacts"
-msgstr ""
+msgstr "GOTV 캠페인 연락처"
 
 #: CRM/Campaign/Info.php
 msgid "Record that contacts voted"
-msgstr ""
+msgstr "연락처 투표 기록"
 
 #: CRM/Campaign/Info.php
 msgid "sign CiviCRM Petition"
-msgstr ""
+msgstr "CiviCRM 청원 서명"
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
@@ -672,15 +672,15 @@ msgstr "검색 설문 조사"
 #: CRM/Campaign/Page/DashBoard.php
 msgid "1 Day"
 msgid_plural "%count Days"
-msgstr[0] ""
+msgstr[0] "%count일"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
-msgstr ""
+msgstr "결과 집합 보기"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Incomplete. Click to configure result set."
-msgstr ""
+msgstr "미완성. 결과 집합을 설정하려면 클릭하세요."
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Petition"
@@ -748,13 +748,13 @@ msgstr "당신은 이미이 청원서에 서명했습니다."
 msgid ""
 "You have already signed this petition but you still <b>need to verify your "
 "email address</b>."
-msgstr ""
+msgstr "당신은 이미 이 청원에 서명하셨습니다. 하지만 당신은 여전히 당신의 이메일을 확인할 필요가 있습니다."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
 "Please check your email inbox for the confirmation email. If you don't find "
 "it, verify if it isn't in your spam folder."
-msgstr ""
+msgstr "확인 이메일을 위해 당신의 이메일에 받은편지보관함을 확인해보세요. 만약 없다면 스팸폴더에 저장되어 있는지도 확인해보세요."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
@@ -777,21 +777,21 @@ msgstr "신청에 대한 필드."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Click here for new profile"
-msgstr ""
+msgstr "새 프로파일을 위해 클릭하세요."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
-msgstr ""
+msgstr "이 제목은 감사페이지 상단에 노출 될 것입니다."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid ""
 "Enter text (and optional HTML layout tags) for the thank-you message that "
 "will appear at the top of the thank-you page."
-msgstr ""
+msgstr "감사 페이지의 상단에 노출 될 당신의 감사 메시지를 입력하세요.(HTML Tag도 가능)"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Disable the email confirmation for unverified contacts?"
-msgstr ""
+msgstr "검증되지 않은 연락처를 위해 이메일 확인을 비활성화 할까요?"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Is this petition active?"
@@ -816,7 +816,7 @@ msgid ""
 "Enter up to ten (10) multiple choice options in this table (click 'another "
 "choice' for each additional choice).You can use existing result set options "
 "by selecting survey result set."
-msgstr ""
+msgstr "최대 10개의 다중선택 옵션을 이 표에 입력하세요.(추가 옵션을 입력하시려면 '다른 선택'을 클릭하세요). 당신은 존재하는 결과 집합 옵션을 설문조사 결과 집합을 선택함으로서 사용할 수 있습니다."
 
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
 #: templates/CRM/Campaign/Page/Campaign.tpl
@@ -889,7 +889,7 @@ msgstr "Result Set for"
 
 #: templates/CRM/Campaign/Form/Survey/Delete.tpl
 msgid "Are you sure you want to delete the %1 survey?"
-msgstr ""
+msgstr "%1 설문조사를 삭제하려고합니다. 확신하십니까?"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Title of the survey."
@@ -897,11 +897,11 @@ msgstr "설문 조사의 제목입니다."
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Opens New Campaign form in a separate window"
-msgstr ""
+msgstr "별도의 창에서 새 캠페인을 여세요."
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "new campaign"
-msgstr ""
+msgstr "새 캠페인"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Select the campaign for which survey is created."
@@ -915,20 +915,20 @@ msgstr "활동 유형을 선택합니다."
 msgid ""
 "Maximum number of contacts that can be reserved for an interviewer at one "
 "time."
-msgstr ""
+msgstr "한번에 면접관이 예약할 수 있는 최대 연락처 수."
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid ""
 "Maximum total number of contacts that can be in a reserved state for an "
 "interviewer."
-msgstr ""
+msgstr "면접관이 예약 상태로 지정할 수 있는 연락처의 총 수량."
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid ""
 "Reserved respondents are released if they haven't been surveyed within this "
 "number of days. The Respondent Processor script must be run periodically to "
 "release respondents."
-msgstr ""
+msgstr "지정한 날짜 안에 설문조사를 하지 않은 예약된 응답자는 방출됩니다. 응답자 프로세서 스크립트는 응답자를 방출하기 위해 주기적으로 실행되어야 합니다."
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Is this survey active?"
@@ -942,7 +942,7 @@ msgstr "이것이 기본 조사입니까?"
 msgid ""
 "Click <strong>record response</strong> button to update values for each "
 "respondent as needed."
-msgstr ""
+msgstr "각각의 응답자들을 위해 필요하다면 <strong>기록 응답</strong>버튼을 클릭해서 값을 업데이트하세요."
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid ""
@@ -951,11 +951,11 @@ msgid ""
 "button below to release any respondents for whom you haven't recorded a "
 "response. <br />Click <strong>Reserve More Respondents >></strong> button if"
 " you need to get more respondents to interview."
-msgstr ""
+msgstr "각각의 응답자에 대한 절보를 업데이트 하려면 필요한대로 <strong>기록 응답</strong>버튼을 클릭하세요.<br />응답을 기록하지 않은 사람들을 위해 응답자를 방출하려면 아래의 <strong>응답자 방출>></strong> 버튼을 클릭하세요.<br />더 많은 응답자들과 인터뷰 하려면 <strong>더 많은 응답자를 예약</strong> 버튼을 클릭하세요"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Survey Report"
-msgstr ""
+msgstr "설문조사 보고서"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Vote"
@@ -963,7 +963,7 @@ msgstr "투표"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Record Responses for All"
-msgstr ""
+msgstr "모든 레코드 응답"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "record response"
@@ -987,7 +987,7 @@ msgstr "응답 업데이트"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Update Responses for All"
-msgstr ""
+msgstr "모든 업데이트 응답"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "reserve"
@@ -995,7 +995,7 @@ msgstr "예약"
 
 #: templates/CRM/Campaign/Form/Task/Release.tpl
 msgid "Do you want to release respondents for '%1' ?"
-msgstr ""
+msgstr "'%1'에 응답한 사람들을 방출하시겠습니까?"
 
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
 msgid "Add Respondent Reservation(s)"
@@ -1003,7 +1003,7 @@ msgstr "응답자 예약 (들)을 추가"
 
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
 msgid "Do you want to reserve respondents for '%1' ?"
-msgstr ""
+msgstr "'%1'에 응답한 사람들을 예약하시겠습니까?"
 
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
 msgid "Add respondent(s) to a new group"
@@ -1015,7 +1015,7 @@ msgid ""
 "related to a particular fund-raising or engagement effort. You can link "
 "activities, contributions, event participation, mailings, membership "
 "signups, and pledges to a particular campaign."
-msgstr ""
+msgstr "당신의 단체는 특정한 모금활동이나 참여 노력과 관련된 모든 구성원간의 상호작용을 추적하기 위해 캠페인을 사용할 수 있습니다. 당신은 활동, 기여, 이벤트 참여, 편지, 회원 가입 그리고 특정 캠페인에 서약한 것들을 연결할 수 있습니다."
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "Show past campaign(s) in this select list."
@@ -1029,19 +1029,19 @@ msgstr "더 적극적인 캠페인은 현재 없습니다."
 msgid ""
 "If you want to associate this record with a campaign, you can <a %1>create a"
 " campaign here</a>."
-msgstr ""
+msgstr "당신이 캠페인과 레코드를 연결기 원한다면 <a %1>여기서 켐페인을 만드실 수 있습니다.</a>"
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
 "<strong>%1 - your email address '%2' has been successfully "
 "verified.</strong>"
-msgstr ""
+msgstr "<strong>%1-당신의 이메일 주소 '%2'가 성공적으로 검증되었습니다.</strong>"
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
 "Oops. We encountered a problem in processing your email verification. Please"
 " contact the site administrator."
-msgstr ""
+msgstr "웁스! 당신의 이메일 인증을 진행하던 중 문제가 발생했어요. 사이트 관리자에게 연락해보세요!"
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid "Thank you for signing the petition."
@@ -1049,49 +1049,49 @@ msgstr "신청서에 서명을 해 주셔서 감사합니다."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "STEP 2: Please Check Your Email"
-msgstr ""
+msgstr "STEP 2: 이메일을 인증해주세요."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
 "To complete and confirm your signature, please follow the activation "
 "instructions sent to the email address you provided."
-msgstr ""
+msgstr "서명을 완성하고 확인하려면 다음의 활성화 지시를 따라주시기 바랍니다. 활성화는 당신이 제공한 이메일로 서명을 전송합니다."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "IMPORTANT"
-msgstr ""
+msgstr "중요함"
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
 "Before we can add your signature, you must validate your email address by "
 "clicking on the activation link in the confirmation e-mail. Sometimes our "
 "confirmation emails get flagged as spam and are moved to your bulk folder."
-msgstr ""
+msgstr "우리가 당신의 서명을 추가하기 전에 당신은 당신의 이메일 주소를 반드시 인증해야 합니다. 인증을 위해 이메일로 전송된 활성화 링크를 클릭해주시기 바랍니다. 때때로 우리의 확인 이메일은 스팸으로 간주되오니 참고하시기 바랍니다."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
 "If you haven't received an email within a few minutes, please check your "
 "spam folder."
-msgstr ""
+msgstr "몇분 안에 이메일이 도착하지 않을 경우 스팸메일함을 확인해주시기 바랍니다."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
 "You have already signed this petition but we<strong>need to confirm your "
 "email address</strong>."
-msgstr ""
+msgstr "당신은 청원에 이미 서명하셨습니다. 그러나 우리는 <strong>당신의 이메일을 확인하고 싶습니다.</strong>"
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
 "Before we can add your signature, you must validate your email address by "
 "clicking on the activation link in the confirmation e-mail. Sometimes our "
 "confirmation emails get flagged as spam and are moved to your spam folder."
-msgstr ""
+msgstr "우리가 당신의 서명을 추가하기 전에 당신은 당신의 이메일 주소를 반드시 인증해야 합니다. 인증을 위해 이메일로 전송된 활성화 링크를 클릭해주시기 바랍니다. 때때로 우리의 확인 이메일은 스팸으로 간주되오니 참고하시기 바랍니다."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
 "If you haven't received an email from us, check your spam folder, it might "
 "have been wrongly classified."
-msgstr ""
+msgstr "우리가 보낸 이메일을 받지 못하셨다면 스펨메일함을 확인해보세요. 잘못 분류되었을 수 있습니다."
 
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
@@ -1105,16 +1105,16 @@ msgstr "연락처의 기본 개수"
 
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey type entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "설문조사 유형이 입력되지 않았습니다. <a href='%1'>당신은 추가할 수 있습니다.</a>"
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group ID"
-msgstr ""
+msgstr "캠페인 그룹 아이디"
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group Type"
-msgstr ""
+msgstr "캠페인 그룹 유형"
 
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "설문조사 유형이 입력되지 않았습니다. <a href='%1'>당신은 추가할 수 있습니다.</a>"
