po: update po/fr_FR/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/provinces.po
+++ b/po/fr_FR/provinces.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Barnicol <g.barnicol@gmail.com>, 2015
+# BFPTC <webmaster@bienfaitpourta.com>, 2016
 # Brice Lacomette <brice.lacomette@laposte.net>, 2015
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2013
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-28 15:30+0000\n"
+"Last-Translator: BFPTC <webmaster@bienfaitpourta.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15556,188 +15557,188 @@ msgstr "Shida Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Comté de Harju"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hiiumaa"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Comté de Viru-Est"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Comté de Jõgeva"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Comté de Järva"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Comté de Lääne"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Comté de Viru-Ouest"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Comté de Põlva"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Comté de Pärnu"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Comté de Rapla"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Saaremaa"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Comté de Tartu"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Comté de Viljandi"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Comté de Võru"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
-msgstr ""
+msgstr "Apskritis de Klaipėda"
 
 msgctxt "province"
 msgid "Marijampolės Apskritis"
-msgstr ""
+msgstr "Apskritis de Marijampolė"
 
 msgctxt "province"
 msgid "Panevėžio Apskritis"
-msgstr ""
+msgstr "Apskritis de Panevėžys"
 
 msgctxt "province"
 msgid "Šiaulių Apskritis"
-msgstr ""
+msgstr "Apskritis de Šiauliai"
 
 msgctxt "province"
 msgid "Tauragės Apskritis"
-msgstr ""
+msgstr "Apskritis de Tauragė"
 
 msgctxt "province"
 msgid "Telšių Apskritis"
-msgstr ""
+msgstr "Apskritis de Telšiai"
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Bataan"
 
 msgctxt "province"
 msgid "Al Bahah"
-msgstr ""
+msgstr "Al Bahah"
 
 msgctxt "province"
 msgid "Al Hudud Ash Shamaliyah"
-msgstr ""
+msgstr "Al-Hudud ach-Chamaliya"
 
 msgctxt "province"
 msgid "Blekinge län"
-msgstr ""
+msgstr "Comté de Blekinge"
 
 msgctxt "province"
 msgid "Dalarnas län"
-msgstr ""
+msgstr "Comté de Dalécarlie"
 
 msgctxt "province"
 msgid "Gotlands län"
-msgstr ""
+msgstr "Comté de Gotland"
 
 msgctxt "province"
 msgid "Gävleborgs län"
-msgstr ""
+msgstr "Comté de Gävleborg"
 
 msgctxt "province"
 msgid "Hallands län"
-msgstr ""
+msgstr "Comté de Halland"
 
 msgctxt "province"
 msgid "Jämtlands län"
-msgstr ""
+msgstr "Comté de Jämtland"
 
 msgctxt "province"
 msgid "Jönkopings län"
-msgstr ""
+msgstr "Comté de Jönköping"
 
 msgctxt "province"
 msgid "Kalmar län"
-msgstr ""
+msgstr "Comté de Kalmar"
 
 msgctxt "province"
 msgid "Kronobergs län"
-msgstr ""
+msgstr "Comté de Kronoberg"
 
 msgctxt "province"
 msgid "Norrbottens län"
-msgstr ""
+msgstr "Comté de Norrbotten"
 
 msgctxt "province"
 msgid "Skåne län"
-msgstr ""
+msgstr "Comté de Scanie"
 
 msgctxt "province"
 msgid "Stockholms län"
-msgstr ""
+msgstr "Comté de Stockholm"
 
 msgctxt "province"
 msgid "Södermanlands län"
-msgstr ""
+msgstr "Comté de Södermanland"
 
 msgctxt "province"
 msgid "Uppsala län"
-msgstr ""
+msgstr "Comté d'Uppsala"
 
 msgctxt "province"
 msgid "Värmlands län"
-msgstr ""
+msgstr "Comté de Värmland"
 
 msgctxt "province"
 msgid "Västerbottens län"
-msgstr ""
+msgstr "Comté de Värmland"
 
 msgctxt "province"
 msgid "Västernorrlands län"
-msgstr ""
+msgstr "Comté de Västernorrland"
 
 msgctxt "province"
 msgid "Västmanlands län"
-msgstr ""
+msgstr "Comté de Västmanland"
 
 msgctxt "province"
 msgid "Västra Götalands län"
-msgstr ""
+msgstr "Comté de Västra Götaland"
 
 msgctxt "province"
 msgid "Örebro län"
-msgstr ""
+msgstr "Comté d'Örebro"
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "Comté d'Östergötland"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Ostrobotnie du Nord"
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Télangana"
