--- a/po/de_DE/member.po
+++ b/po/de_DE/member.po
@@ -10,6 +10,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2014
 # Fabian <schuttenberg@systopia.de>, 2013-2016
+# Finn F <ffmoto95@gmail.com>, 2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Michal Seidler, 2012
 # Jo <jo@caj-augsburg.de>, 2011-2012
@@ -23,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-30 07:31+0000\n"
+"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -198,7 +199,7 @@ msgstr "Mitglieds-ID"
 
 #: CRM/Member/DAO/Membership.php CRM/Member/DAO/MembershipLog.php
 msgid "Max Related"
-msgstr ""
+msgstr "Maximum erreicht"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Memberhip Recurring Contribution"
