--- a/po/de_DE/batch.po
+++ b/po/de_DE/batch.po
@@ -6,6 +6,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
 # Fabian <schuttenberg@systopia.de>, 2013
+# Finn F <ffmoto95@gmail.com>, 2016
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2015
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-30 07:27+0000\n"
+"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgstr "Batch wiedereröffnen"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Batch löschen"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
