--- a/po/el_GR/drupal-civicrm.po
+++ b/po/el_GR/drupal-civicrm.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ioannis Ampatzis <ampatzis.ioannis@gmail.com>, 2016
 # kvisitor <kvisitor@gnugr.org>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Vangelis P. <v.pantazis@ixiam.com>, 2014-2015
@@ -10,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-06-04 11:42+0000\n"
-"Last-Translator: Vangelis P. <v.pantazis@ixiam.com>\n"
-"Language-Team: Greek (http://www.transifex.com/projects/p/civicrm/language/el/)\n"
+"PO-Revision-Date: 2016-07-31 18:31+0000\n"
+"Last-Translator: Ioannis Ampatzis <ampatzis.ioannis@gmail.com>\n"
+"Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
