po: update po/en_GB/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/common-base.po
+++ b/po/en_GB/common-base.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Andi Chandler <andi@gowling.com>, 2016
+# David Kane <d.r.kane@gmail.com>, 2016
 # Graham <graham@mc3.coop>, 2012-2013
 # Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2012
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-31 07:08+0000\n"
+"Last-Translator: David Kane <d.r.kane@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -144,11 +145,11 @@ msgstr "ACL Name"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "Deny ACL?"
-msgstr ""
+msgstr "Deny ACL?"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Entity"
-msgstr ""
+msgstr "ACL Entity"
 
 #: CRM/ACL/DAO/ACL.php CRM/Core/DAO/EntityTag.php
 #: CRM/Core/DAO/RecurringEntity.php
@@ -157,27 +158,27 @@ msgstr "Entity ID"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Operation"
-msgstr ""
+msgstr "ACL Operation"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object"
-msgstr ""
+msgstr "ACL Object"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object ID"
-msgstr ""
+msgstr "ACL Object ID"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Table"
-msgstr ""
+msgstr "ACL Table"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Group ID"
-msgstr ""
+msgstr "ACL Group ID"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Is Active?"
-msgstr ""
+msgstr "ACL Is Active?"
 
 #: CRM/ACL/DAO/Cache.php CRM/Contact/BAO/Query.php CRM/Contact/DAO/Contact.php
 #: CRM/Core/BAO/ActionSchedule.php CRM/Core/DAO/Log.php
@@ -186,11 +187,11 @@ msgstr "Modified Date"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "Entity Role"
-msgstr ""
+msgstr "Entity Role"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Role ID"
-msgstr ""
+msgstr "ACL Role ID"
 
 #: CRM/ACL/DAO/EntityRole.php CRM/Core/DAO/ActionLog.php
 #: CRM/Core/DAO/Discount.php CRM/Core/DAO/EntityFile.php
@@ -204,11 +205,11 @@ msgstr "Entity Table"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity ID"
-msgstr ""
+msgstr "ACL Entity ID"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity Role is Active"
-msgstr ""
+msgstr "ACL Entity Role is Active"
 
 #: CRM/ACL/Form/ACL.php
 msgid "ACL"
@@ -621,7 +622,7 @@ msgstr "Activity Assignee"
 #: CRM/Activity/BAO/Query.php CRM/Contact/BAO/Query.php
 #: CRM/Core/BAO/CustomQuery.php
 msgid "%1 %2 %3"
-msgstr ""
+msgstr "%1 %2 %3"
 
 #: CRM/Activity/BAO/Query.php xml/templates/civicrm_data.tpl
 msgid "Survey"
@@ -1120,14 +1121,14 @@ msgstr "Please select at least one tag."
 #: CRM/Activity/Form/Task/AddToTag.php
 msgid "Activity tagged"
 msgid_plural "%count activities tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Activity tagged"
+msgstr[1] "%count activities tagged"
 
 #: CRM/Activity/Form/Task/AddToTag.php
 msgid "1 activity already had this tag"
 msgid_plural "%count activities already had this tag"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 activity already had this tag"
+msgstr[1] "%count activities already had this tag"
 
 #: CRM/Activity/Form/Task/AddToTag.php CRM/Contact/Form/Task/AddToTag.php
 msgid "Added Tag <em>%1</em>"
@@ -2591,7 +2592,7 @@ msgstr "Column No"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Dashlet is Minimized?"
-msgstr ""
+msgstr "Dashlet is Minimised?"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Dashlet is FullScreen?"
@@ -2723,7 +2724,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/GroupOrganization.php
 msgid "Group Organization ID"
-msgstr ""
+msgstr "Group Organisation ID"
 
 #: CRM/Contact/DAO/GroupOrganization.php
 #: CRM/Contact/Form/Task/AddToOrganization.php
@@ -6910,15 +6911,15 @@ msgstr ""
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Minimize Dashlet?"
-msgstr ""
+msgstr "Minimise Dashlet?"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Fullscreen URL"
-msgstr ""
+msgstr "Fullscreen URL"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Is Fullscreen?"
-msgstr ""
+msgstr "Is Fullscreen?"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Is Dashlet Active?"
@@ -6962,7 +6963,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Domain.php
 msgid "Language Customizations"
-msgstr ""
+msgstr "Language Customisations"
 
 #: CRM/Core/DAO/Email.php
 msgid "Email ID"
@@ -8979,7 +8980,7 @@ msgstr "access deleted contacts"
 
 #: CRM/Core/Permission.php
 msgid "Access contacts in the trash"
-msgstr ""
+msgstr "Access contacts in the bin"
 
 #: CRM/Core/Permission.php
 msgid "import contacts"
@@ -12242,7 +12243,7 @@ msgstr "Profile Field Saved"
 msgid ""
 "Cannot add or update profile field \"%1\" with combination of Household or "
 "Organization or any subtypes of Household or Organization."
-msgstr ""
+msgstr "Cannot add or update profile field \"%1\" with combination of Household or Organisation or any subtypes of Household or Organisation."
 
 #: CRM/UF/Form/Field.php
 msgid ""
@@ -20417,7 +20418,7 @@ msgid ""
 "you <a href=\"%1\" target=\"_blank\">support CiviCRM by becoming a "
 "member</a> or by <a href=\"%2\" target=\"_blank\">making a donation</a>. ~ "
 "Dave Greenberg, Co-Founder"
-msgstr ""
+msgstr "The CiviCRM Core Team has been hard at work and is proud to release 4.6, the first major update of 2015. Though it is packed with enhancements and continues to mature the leading open source CRM for nonprofits worldwide, it does come with a cost to produce, maintain and improve upon. Without funding from organisations like yours, future releases are at risk of never being realized. We invite you to enjoy the improvements in 4.6 and ask that you <a href=\"%1\" target=\"_blank\">support CiviCRM by becoming a member</a> or by <a href=\"%2\" target=\"_blank\">making a donation</a>. ~ Dave Greenberg, Co-Founder"
 
 #: templates/CRM/common/success.tpl
 msgid ""
@@ -24249,7 +24250,7 @@ msgid ""
 "manually after running this upgrade. <a href='%1' style='color:white; text-"
 "decoration:underline; font-weight:bold;' target='_blank'>Click here</a> for "
 "detailed instructions. %2"
-msgstr ""
+msgstr "The default copies of the message templates listed below will be updated to handle new features or correct a problem. Your installation has customised versions of these message templates, and you will need to apply the updates manually after running this upgrade. <a href='%1' style='color:white; text-decoration:underline; font-weight:bold;' target='_blank'>Click here</a> for detailed instructions. %2"
 
 #: CRM/Upgrade/Incremental/Legacy.php
 msgid ""
